Fix sidebar icon size to align text nicer
Causes hover effect to behave better as well when mousing over icon

--- a/client/src/Sidebar.css
+++ b/client/src/Sidebar.css
@@ -81,6 +81,10 @@ Note: Beware of modifying this element as it can break the animations - you shou
   transition: all 250ms ease-in-out;
 }
 
+.bm-item svg {
+  width: 2.5rem;
+}
+
 .bm-item:hover,.bm-item a:hover {
   color: #ffffff;
   transform: translateX(0.7rem);
